Fixed height overflow in admin filter panel

--- a/medobs/reservations/static/css/filters.css
+++ b/medobs/reservations/static/css/filters.css
@@ -2,6 +2,7 @@
 	width: 225px!important;
 	border-bottom: 2px solid #DDDDDD!important;
 	bottom: 0;
+	overflow-y: auto;
 }
 
 .change-list .filtered form .results, .change-list .filtered form .paginator, .filtered #toolbar, .filtered div.xfull {
@@ -14,5 +15,5 @@
 
 .change-list .filtered {
 	background: repeat-y scroll right top #FFFFFF !important;
-	min-height: 610px!important;
+	min-height: 655px!important;
 }
